fix: horizontal scroll

--- a/src/style.scss
+++ b/src/style.scss
@@ -43,12 +43,24 @@ body {
 }
 
 nav {
-  width: 100%;
   display: flex;
   padding: var(--md-space);
 
   h1 {
+    display: inline-flex;
+    align-items: center;
     margin: 0 var(--md-space);
+    text-overflow: ellipsis;
+    max-width: calc(100vw - calc(var(--md-space) * 2));
+    white-space: nowrap;
+    overflow: hidden;
+  }
+
+  @media (width <= 480px) {
+    padding: var(--sm-space);
+    h1 {
+      max-width: calc(100vw - calc(var(--sm-space) * 2));
+    }
   }
 }
 
